--- a/attributions.html
+++ b/attributions.html
@@ -6,12 +6,19 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Attributions</title>
 </head>
-<body>
-    <h1>Attributions</h1>
-    <a href="https://www.flaticon.com/free-icons/configuration" title="configuration icons">Configuration icons created by Freepik - Flaticon</a>
-    <a href="https://www.flaticon.com/free-icons/knowledge" title="knowledge icons">Knowledge icons created by Smashicons - Flaticon</a>
+<body style="text-align: start;">
+    <h1 style="font-family: sans-serif;">Attributions</h1>
+    <ul>
+        <li>
+            <a style="display: block;"  href="https://www.flaticon.com/free-icons/configuration" title="configuration icons">Configuration icons created by Freepik - Flaticon</a>
+        </li>
+        <li>
+            <a style="display: block;"  href="https://www.flaticon.com/free-icons/knowledge" title="knowledge icons">Knowledge icons created by Smashicons - Flaticon</a>
+        </li>
+    </ul>
     <a style="display: block;" href="index.html">Back To Home Page</a>
 </body>
 </html>
