--- a/attributions.html
+++ b/attributions.html
@@ -13,12 +13,12 @@
     <h1 style="font-family: sans-serif;">Attributions</h1>
     <ul>
         <li>
-            <a style="display: block;"  href="https://www.flaticon.com/free-icons/configuration" title="configuration icons">Configuration icons created by Freepik - Flaticon</a>
+            <a class="white_background_a" style="display: block;"  href="https://www.flaticon.com/free-icons/configuration" title="configuration icons">Configuration icons created by Freepik - Flaticon</a>
         </li>
         <li>
-            <a style="display: block;"  href="https://www.flaticon.com/free-icons/knowledge" title="knowledge icons">Knowledge icons created by Smashicons - Flaticon</a>
+            <a class="white_background_a" style="display: block;"  href="https://www.flaticon.com/free-icons/knowledge" title="knowledge icons">Knowledge icons created by Smashicons - Flaticon</a>
         </li>
     </ul>
-    <a style="display: block;" href="index.html">Back To Home Page</a>
+    <a class="white_background_a" style="display: block;" href="index.html">Back To Home Page</a>
 </body>
 </html>
